plugins {
    id 'java'
    id 'org.springframework.boot' version '3.2.0'
    id 'io.spring.dependency-management' version '1.1.3'
    id 'checkstyle'
}

group = 'com.example'
version = '0.0.1-SNAPSHOT'

java {
    sourceCompatibility = '17'
}

configurations {
    compileOnly {
        extendsFrom annotationProcessor
    }
}

repositories {
    mavenCentral()
}


//SPRING-BOOT
dependencies {
    implementation group: 'org.springdoc', name: 'springdoc-openapi-starter-webmvc-ui', version: '2.3.0'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-validation', version: '3.2.1'
    implementation 'org.springframework.boot:spring-boot-starter-web'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-websocket', version: '3.2.2'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-mail', version: '3.2.1'
    implementation group: 'org.springframework.boot', name: 'spring-boot-configuration-processor', version: '3.2.0'
}

//GRAPHQL
dependencies {
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-graphql', version: '3.2.0'
}

//DATABASE
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
    implementation group: 'org.postgresql', name: 'postgresql', version: '42.5.1'
}

//LOMBOK
dependencies {
    compileOnly 'org.projectlombok:lombok:1.18.24'
    testCompileOnly 'org.projectlombok:lombok:1.18.24'
    annotationProcessor 'org.projectlombok:lombok:1.18.24'
    testAnnotationProcessor 'org.projectlombok:lombok:1.18.24'
}

//ADDITIONAL
dependencies {
    implementation group: 'org.mapstruct', name: 'mapstruct-processor', version: '1.5.3.Final'
    implementation 'com.cloudinary:cloudinary-http44:1.17.0'
    implementation group: 'org.liquibase', name: 'liquibase-core', version: '4.24.0'
    implementation group: 'org.mapstruct', name: 'mapstruct', version: '1.5.5.Final'
    implementation group: 'org.freemarker', name: 'freemarker', version: '2.3.31'
}

//SPRING-SECURITY
dependencies {
    implementation 'org.springframework.boot:spring-boot-starter-oauth2-client'
    implementation group: 'org.springframework.boot', name: 'spring-boot-starter-security', version: '3.2.2'
    implementation group: 'io.jsonwebtoken', name: 'jjwt-api', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-impl', version: '0.12.5'
    runtimeOnly group: 'io.jsonwebtoken', name: 'jjwt-jackson', version: '0.12.5'
}

//SPRING-TEST
dependencies {
    testImplementation 'org.springframework.graphql:spring-graphql-test'
    testImplementation 'org.springframework.boot:spring-boot-starter-test'
}

tasks.named('test') {
    useJUnitPlatform()
}

checkstyle {
    toolVersion '10.14.0'
    configFile = file('src/main/resources/checkstyle/checkstyle.xml')
}

checkstyleMain {
    source = 'src/main/java'
}

checkstyleTest {
    source = 'src/test/java'
}